# robot_mpcs

./: .gitignore  .gitmodules  README.md  createMPCSolver.py  pyproject.toml  setup.py
examples/: .gitignore  boxer_example.py  boxer_example_global.py  boxer_example_supermarket.py  helpers.py  makeSolver.py  make_solver.py  mpcPlanner.py  mpcPlannerURDF.py  mpc_example.py  panda_example.py  panda_fk.urdf  pointRobot_example.py  pointRobot_example_old.py  point_robot_casadi.py  point_robot_example.py  utils.py
examples/assets/boxer/: boxer_fk.urdf
examples/config/: boxerMpc.yaml  diffDriveMpc.yaml  mpcPlanner.yaml  pandaMPC.yaml  pandaMpc.yaml  planarArmMpc.yaml  po1ntRobotMpc.yaml  pointRobotMpc.yaml
robotmpcs/: diffDriveMpcModel.py  helpers.py  mpcModel.py  pandaMpcModel.py  planarArmMpcModel.py  pointRobotMpcModel.py
robotmpcs/global_planner/: a_star.py  globalPlanner.py  gridmap.py
robotmpcs/models/: boxerMpcModel.py  casadi_mpc.py  casadi_nlp.py  diffDriveMpcModel.py  diff_drive_mpc_model.py  mpcBase.py  mpcModel.py  pandaMpcModel.py  planarArmMpcModel.py  pointRobotMpcModel.py
robotmpcs/models/inequalities/: InequalityManager.py  InputLimitConstraints.py  JointLimitConstraints.py  LinearConstraints.py  RadialConstraint.py  RadialConstraints.py  SelfCollisionAvoidanceConstraints.py  SpeedLimitConstraints.py  VelLimitConstraints.py  __init__.py
robotmpcs/models/objectives/: ObjectiveManager.py  __init__.py  constraint_avoidance.py  goal_mpc_objective.py  goal_reaching.py
robotmpcs/models/utils/: free_space_decomposition.py  utils.py
robotmpcs/planner/: mpcPlanner.py  visualizer.py
robotmpcs/planner/sensor_conversion/: free_space_decomposition.py
robotmpcs/utils/: free_space_decomposition.py  utils.py
ros_bridge/: .gitignore  README.md
ros_bridge/src/robotmpcs_ros/: CMakeLists.txt  package.xml
ros_bridge/src/robotmpcs_ros/config/: boxer_mpc_config.yaml
ros_bridge/src/robotmpcs_ros/config/assets/boxer/: boxer_fk.urdf
ros_bridge/src/robotmpcs_ros/launch/: boxer_mpc.launch  lidar_merger.launch
ros_bridge/src/robotmpcs_ros/rviz/: boxer_example.rviz
ros_bridge/src/robotmpcs_ros/scripts/: make_solver.py
ros_bridge/src/robotmpcs_ros/src/: mpc_planner_node
ros_bridge/src/robotmpcs_ros/utils/: ros_visuals.py  transformations.py
src/robot_mpcs/: .gitignore  cleanCreate.py  diffDriveMpcModel.py  mpcModel.py  planarArmMpcModel.py  pointRobotMpcModel.py
