[tool.poetry]
name = "robotmpcs"
version = "0.2.1"
description = "MPC generation for robots using ForcesPro."
authors = ["Max Spahn <m.spahn@tudelft.nl>"]

[tool.poetry.dependencies]
python = "^3.8,<3.10"
casadi = "^3.5.4,!=3.5.5.post1,!=3.5.5.post2"
requests = "^2.27.1"
pyaml = "^21.10.1"
motion-planning-scenes = {version = "^0.1", optional = true}
planarenvs = {version = "^1.0.3", optional = true}
urdfenvs = {version = "^0.2.2", optional = true}
scipy = "^1.5.0"
forwardkinematics = "^1.1.1"
setuptools = "^67.5.1"
numpy = "<1.23"

[tool.poetry.dev-dependencies]

[tool.poetry.extras]
agents = ["planarenvs", "urdfenvs", "motion-planning-scenes"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
